--- a/assets/index.html
+++ b/assets/index.html
@@ -1,5 +1,8 @@
 <html>
     <body>
+        <nav class="navbar navbar-light bg-light">
+            <a class="navbar-brand" href="/">Navbar</a>
+        </nav>
         <h1> Ctimulus </h1>
         <div data-controller="post">
             <input data-target="post.content" data-action="input->post#content">
