--- a/assets/index.html
+++ b/assets/index.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <nav class="navbar navbar-light bg-light">
-            <a class="navbar-brand" href="/">Navbar</a>
+            <a class="navbar-brand" href="/">Ctimulus</a>
         </nav>
         <h1> Ctimulus </h1>
         <div data-controller="post">
