--- a/assets/index.html
+++ b/assets/index.html
@@ -5,9 +5,16 @@
         </nav>
         <h1> Ctimulus </h1>
         <div data-controller="post">
-            <input data-target="post.content" data-action="input->post#content">
-
+            <div class="input-group">
+                <div class="input-group-append">
+                    <span class="input-group-text">Input talk</span>
+                </div>
+                <input data-target="post.content" data-action="input->post#content">
+            </div>
             <div data-target="post.preview"></div>
+            <p>
+                <button type="button" class="btn btn-primary" data-action="click->post#submit">Submit</button>
+            </p>
         </div>
         <script src="./index.js" type="text/javascript"></script>
     </body>
